--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -24,7 +24,10 @@ RUN {\
         echo 'xdebug.mode=debug,develop; develop: prettier `var_dump`, debug: enables step debugger'; \
         echo 'xdebug.start_with_request = yes;'; \
         echo 'xdebug.client_host = host.docker.internal;'; \
-    } > /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+    } > /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini.bk
+
+## XDebug toggles 
+COPY ./scripts/xdebug /usr/local/bin/xdebug
 
 # Configure PHP Environment 
 COPY ./conf/php.ini.dev $PHP_INI_DIR/conf.d/custom.ini
